# startups-analysis-spain

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: fuentes.yaml
data/gold/: aei_provincial.csv  afiliados_provincial.csv  alquiler_ccaa_2021_2023.parquet  alquiler_municipios_2021_2023.parquet  categoria_cluster_provincia_2023.csv  centros_somma_provincial.csv  cobertura_provincial.csv  ct_caeit_provincial.csv  egresados_doctorado_2021_2024.parquet  icts_provincial.csv  universidades_provincial.csv
data/golden/: alquiler_provincias_2021_2023.parquet  egresados_grados_2021_2024.parquet  egresados_master_2021_2024.parquet  parques_provincial.csv  provincia_startups_grados_accum_2024.parquet
data/silver/: MUNCNAE1220.csv  MUNCNAE1221.csv  MUNCNAE1222.csv  MUNCNAE1223.csv  MUNCNAE1224.csv  agrupaciones_empresariales_innovadoras.csv  caj_esp_012025.csv  centros_somma_recidi.csv  centros_tecnologicos_y_de_apoyo_recidi.csv  cnae_2025.csv  cobertura_banda_ancha_ccaa_2021_2024.csv  cobertura_banda_ancha_municipios_2021_2024.csv  cobertura_banda_ancha_nacional_2021_2024.csv  cobertura_banda_ancha_provincias_2021_2024.csv  iberinform_startups_certificadas.parquet  icts.csv  ine_ccaa_y_provincias.csv  municipios.csv  parques_cientificos_tecnologicos_recidi.csv  poblacion_2020.parquet  poblacion_2021.parquet  poblacion_2022.parquet  poblacion_2023.parquet  (+4 more)
notebooks/: 01_extract.ipynb  02_transform.ipynb  03_01_sample.ipynb  03_02_workforce.ipynb  03_03_graduates.ipynb  03_04_network.ipynb  03_05_RECIDI.ipynb  04_model.ipynb  05_map.ipynb
(+948 files in other folders)
