[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.5.1",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "keplergl>=0.3.7",
    "matplot2tikz>=0.5.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "selenium-stealth>=1.0.6",
    "statsmodels>=0.14.6",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.14",
]

[tool.setuptools]
packages = ["src"]
